--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,17 @@
 <!-- <p>heroes works!</p> -->
-<h2>
+<!-- <h2>
   {{ hero }}
-</h2>
+</h2> -->
+<h2>{{ hero.name | uppercase }} Details</h2>
+<div><span>id: </span>{{ hero.id }}</div>
+<div><span>name: </span>{{ hero.name }}</div>
+<!-- 
+<DIV>
+  <label for="name">Hero name: </label>
+  <input type="text" id="name" [(ngModel)]="hero.name" placeholder="name" />
+</DIV> -->
+
+<div>
+  <label for="name">Hero name: </label>
+  <input id="name" [(ngModel)]="hero.name" placeholder="name" />
+</div>
