--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -5,13 +5,14 @@
 <h2>{{ hero.name | uppercase }} Details</h2>
 <div><span>id: </span>{{ hero.id }}</div>
 <div><span>name: </span>{{ hero.name }}</div>
-<!-- 
+
 <DIV>
   <label for="name">Hero name: </label>
+  <!-- [(ngModel)] es como poner value={reactSateValue} en react -->
   <input type="text" id="name" [(ngModel)]="hero.name" placeholder="name" />
-</DIV> -->
+</DIV>
 
-<div>
+<!-- <div>
   <label for="name">Hero name: </label>
   <input id="name" [(ngModel)]="hero.name" placeholder="name" />
-</div>
+</div> -->
