--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,15 +2,26 @@
 <!-- <h2>
   {{ hero }}
 </h2> -->
-<h2>{{ hero.name | uppercase }} Details</h2>
-<div><span>id: </span>{{ hero.id }}</div>
-<div><span>name: </span>{{ hero.name }}</div>
 
-<DIV>
-  <label for="name">Hero name: </label>
-  <!-- [(ngModel)] es como poner value={reactSateValue} en react -->
-  <input type="text" id="name" [(ngModel)]="hero.name" placeholder="name" />
-</DIV>
+
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <button [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
+      <span class="badge">{{hero.id}}</span>
+      <span class="name">{{hero.name}}</span>
+    </button>
+  </li>
+</ul>
+
+<div *ngIf="selectedHero">
+  <h2>{{selectedHero.name | uppercase}} Details</h2>
+<div>id: {{selectedHero.id}}</div>
+<div>
+  <label for="hero-name">Hero name: </label>
+  <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
+</div>
+</div>
 
 <!-- <div>
   <label for="name">Hero name: </label>
