--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <h1>
   {{ title }}
 </h1>
-<app-heroes> </app-heroes>
+<!-- <app-heroes> </app-heroes>
+
+-->
+<nav>
+  <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+  <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
+<!-- router-outlet es una directiva de angular que permite que angular se encargue de renderizar el componente que corresponda a la ruta que se esta navegando. -->
 <app-messages></app-messages>
