--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- <p>dashboard works!</p> -->
 <h2>Top Heroes</h2>
 <div class="heroes-menu">
-  <a *ngFor="let hero of heroes">
+  <a *ngFor="let hero of heroes" routerLink="/details/{{hero.id}}">
     {{hero.name}}
   </a>
 </div>
