--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,14 +3,24 @@
   {{ hero }}
 </h2> -->
 
-
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <button [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
-      <span class="badge">{{hero.id}}</span>
-      <span class="name">{{hero.name}}</span>
-    </button>
+    <!-- <button
+      [class.selected]="hero === selectedHero"
+      type="button"
+      (click)="onSelect(hero)"
+    >
+     dale la clase selected a este elemento si el heroe es el seleccionado 
+      <span class="badge">{{ hero.id }}</span>
+      <span class="name">{{ hero.name }}</span>
+    </button> -->
+    <a href="" routerLink="/details/{{ hero.id }}">
+      <span class="badge">
+        {{ hero.id }}
+      </span>
+      {{ hero.name }}
+    </a>
   </li>
 </ul>
 
