--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -15,7 +15,7 @@
       <span class="badge">{{ hero.id }}</span>
       <span class="name">{{ hero.name }}</span>
     </button> -->
-    <a href="" routerLink="/details/{{ hero.id }}">
+    <a href="" routerLink="/detail/{{ hero.id }}">
       <span class="badge">
         {{ hero.id }}
       </span>
